Fixed image's z-index

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1078,7 +1078,7 @@ a {
     border-radius: 50%;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 0;
     box-shadow: inset 2.5px 2.5px 10px 0px #000;
   }
 }
@@ -1088,6 +1088,6 @@ a {
   border: 0.35rem solid $primary-color;
   object-fit: cover;
   box-shadow: 0.25rem 0.25rem 0.5rem $primary-color;
-  z-index: 2;
+  z-index: 1;
   position: relative;
 }
